Mon Sep 16 18:10:59 1991  Linus Tolke Y  (linus at lysator)

	* clienttypes.el (read-list-delete-text): Justerat doc-str{ngen.

	* prioritize.el (lyskom-prioritize-1,lyskom-prioritize-2): Fixat
	  s} att ledtexterna l{ggs in med lyskom-insert (blir
	  iso->swascii-konverterade.

	* edit-text.el (lyskom-edit-read-misc-list): Buggfix. Det jag
	  gjorde ig}r. Nu funkar det att l{gga in texter ocks}.

Sun Sep 15 18:17:11 1991  Linus Tolke Y  (linus at robin)

	* lyskom-rest.el, edit-text.el, swedish-strings.el
	  (lyskom-edit-insert-misc, lyskom-edit-read-misc-list): Fixat s}
	  att den konverterar {ver [rende raden och skriv texten raden.

	* commands1.el (lyskom-change-name): Scrollar p} r{tt st{lle.

	* edit-text.el, startup.el, commands1.el (kom-list-persons,
	  kom-list-conferences, kom-edit-send, kom-create-conf):
	  read-string ersatt med lyskom-read-string.

	* edit-text.el (lyskom-edit-mode): Nu skall vi inte f} f|rsta
	  tangenttryckningen att betyda lyskom-kommandon.

	* vars.el, commands1.el: Inlagt en kom-quit-hook.

Fri Sep 13 23:50:56 1991  Inge Wallin  (inge at lysator)

	* lyskom-rest.el(lyskom-set-mode-line): Nu rapporterar klienten
	  b}de antal ol{sta i nuvarande m|te och totalt antal ol{sta i
	  status-raden. 

Mon Sep  9 16:35:39 1991  Lars Willf|r  (willfor at robin)

	* Tog bort hanteringen av den gamla typen av
	  broadcast-meddelanden.

	* Tog bort den gamla funktionen lyskom-show-broadcast-message
	  (ers{tts av lyskom-show-personal-message) och den av den
	  funktionen anv{nda str{ngen broadcast-from.

	* async.el och swedish-strings.el: Nu visas tiden (enligt
	  klienten) n{r man f}r ett personligt eller allm{nt meddelande.

Sun Sep  8 21:51:41 1991  Per Cederqvist  (ceder at robin)

	* commands1.el (lyskom-jump): Stabiliserat. Nu g|rs n}got vettigt
	  n{r mark-as-read {r nil.

Thu Sep  5 15:55:30 1991  Linus Tolke Y  (linus at lysator)

	* lyskom-rest.el, vars.el, swedish-strings.el (kom-save-text): Nu